--- a/package.json
+++ b/package.json
@@ -2,13 +2,21 @@
   "name": "tandem",
   "version": "1.0.0",
   "main": "index.js",
-  "private" :true,
-  "workspaces" :["client", "server"],
+  "private": true,
+  "workspaces": [
+    "client",
+    "server"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
+  }
 }
